Fix ol getting stuck in the left side page gutter.

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -69,3 +69,7 @@ details a {
   font-weight: bold;
   text-decoration: underline !important;
 }
+
+ol, ul {
+  padding-left:2.5rem !important;
+}
